// Vitest Snapshot v1

exports[`Button.component.vue > should render correctly 1`] = `
<button
  class="transition-color duration-300 ring-offset-2 focus:ring-2 py-2 px-5 text-sm text-white bg-black rounded-md bg-indigo-500 hover:opacity-90 focus:opacity-90 focus:ring-indigo-500"
  type="button"
>
  
  
</button>
`;

exports[`Button.component.vue > should render correctly with slot 1`] = `
<button
  class="transition-color duration-300 ring-offset-2 focus:ring-2 py-2 px-5 text-sm text-white bg-black rounded-md bg-indigo-500 hover:opacity-90 focus:opacity-90 focus:ring-indigo-500"
  type="button"
>
  
  My Text
  
</button>
`;
